adição de footer

--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
           </div>
         </article>
       </section>
+      <footer class="footer"> Rosana Damasceno 2020</footer>
     </main>
 
-    <script src="" async defer></script>
+  
   </body>
 </html>
